# pyforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/pyforge/: __init__.py  cli.py  config.py  generator.py  prompts.py  remote.py  template_catalog.py  utils.py
src/pyforge/templates/basic/src/package/: __main__.py.jinja  main.py.jinja
src/pyforge/templates/basic/tests/: test_main.py.jinja
src/pyforge/templates/cli/src/package/: __main__.py.jinja  cli.py.jinja
src/pyforge/templates/cli/tests/: test_cli.py.jinja
src/pyforge/templates/fastapi/src/package/: main.py.jinja
src/pyforge/templates/fastapi/tests/: test_main.py.jinja
src/pyforge/templates/flask/src/package/: app.py.jinja
src/pyforge/templates/flask/tests/: test_app.py.jinja
src/pyforge/templates/shared/: Justfile.jinja  Makefile.jinja  README.md.jinja  env.example.jinja  gitignore.jinja  pre-commit-config.yaml.jinja  pyproject.toml.jinja
src/pyforge/templates/shared/src/package/: __init__.py.jinja
tests/: test_cli.py  test_config.py  test_generator.py  test_prompts.py
