[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyforge-init"
version = "0.1.1"
description = "A CLI tool to scaffold new Python projects, similar to create-react-app."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
newpython = "pyforge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyforge"]
